@@ -1,3 +1,8 @@
+2005-03-26  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (histogram_range_fiddling): SourceForge patch #1120626 (Frank Maas).
+	Allow auto-scaling of either end of the X-range for histograms individually.
+
 2005-03-25  Ethan Merritt  <merritt@u.washington.edu>
 
 	* config/makefile.amg config/term_pc.h docs/Makefile.in sec/makefile.all:
